feat(build): U1 — baseline on JDK 25 LTS, preview-free
Follows kernel ADR-066 and SDK ADR-069. The reactor compiles at --release 25
and ships class-file major 69 with no preview stamp, so an LTS-only consumer
can finally run the processor and the Maven plugin — SDK 0.10.0's release
notes name this repo as the last thing stopping them.

Net removal. Nothing here used a JDK-26-only API and nothing used a preview
feature; the preview flags existed only because kernel 0.10.2 shipped
preview-stamped classes, and U0's bump to 0.11.0 ended that.

  maven.compiler.release           26 -> 25
  requireJavaVersion       [26,27) -> [25,) (open-ended: the range was only
                                    exact because javac rejects preview
                                    compilation for a non-current release)
  @SupportedSourceVersion(RELEASE_26)
                                  -> getSupportedSourceVersion() override
                                     returning SourceVersion.latestSupported()
  InMemoryJavaCompiler            -> --release 25, no --enable-preview
  GeneratedTestsE2ETest           -> same
  CI matrix                       -> ['25', '26']

The processor's source version is an override rather than a pinned constant
because the annotation can only carry a literal and every literal is wrong
for somebody: RELEASE_26 could not be compiled on JDK 25 at all (which is
what blocked this descent until it moved), and on a newer JDK it warns at
every consumer build compiling at a higher release — the kernel's preview
line compiles at 28.

Two things measured rather than assumed. The ASM override on
maven-plugin-plugin STAYS: removing it fails with "Unsupported class file
major version 69", so plugin-tools 3.13.1 cannot read the new baseline
either — only the number in its comment was stale. And the CI matrix ADDS
the 25 row rather than replacing 26, because "mvn verify (JDK 26)" is a
required status check on main: renaming that job would leave the required
check perma